# rustup.rs

./: Cargo.toml
src/download/: Cargo.toml
src/download/src/: errors.rs  lib.rs
src/rustup-dist/: Cargo.toml
src/rustup-dist/src/: download.rs
src/rustup-mock/: Cargo.toml
src/rustup-utils/: Cargo.toml
src/rustup-utils/src/: lib.rs  notifications.rs  utils.rs
