[package]

name = "download"
version = "0.3.0"
authors = [ "Brian Anderson <banderson@mozilla.com>" ]

license = "MIT/Apache-2.0"

[features]

default = ["curl-backend"]

curl-backend = ["curl"]
reqwest-backend = ["reqwest"]

[dependencies]
error-chain = "0.7.1"
url = "^1.2"
curl = { version = "0.4.6", optional = true }
lazy_static = { version = "0.2", optional = true }

[dev-dependencies]
tempdir = "0.3.4"

[dependencies.reqwest]
version = "^0.6.2"
optional = true

[dependencies.env_proxy]
version = "0.1.1"
optional = true
